# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("mojo.gni")

group("public") {
  # Meta-target, don't link into production code.
  testonly = true
  deps = [
    ":libmojo_sdk",
    ":sdk",
    "cpp/application:standalone",
    "cpp/bindings",
    "cpp/environment:standalone",
    "cpp/utility",
    "interfaces/bindings/tests:test_interfaces",
  ]
}

group("sdk") {
  deps = [
    "c:system",
    "cpp/application:standalone",
    "cpp/bindings",
    "cpp/environment:standalone",
    "cpp/utility",
    "interfaces/application",
    "interfaces/bindings",
    "interfaces/network",
    "js",
  ]
}

static_library("libmojo_sdk") {
  complete_static_lib = true
  deps = [
    ":sdk",
  ]
}

# "Forwarding" target, to make it easy to put gtest wherever you want.
# TODO(vtl): Maybe this should be parametrized and made into
# //build/module_args/mojo.gni (but maybe that's overkill).
group("gtest") {
  testonly = true
  public_deps = [
    "//third_party/gtest",
  ]
}
