# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

shared_library("libmojo") {
  output_name = "mojo"
  sources = [
    "buffer.c",
    "data_pipe.c",
    "handle.c",
    "message_pipe.c",
    "mojo_export.h",
    "options.h",
    "time.c",
    "time_utils.h",
    "wait.c",
    "wait_set.c",
  ]

  deps = [
    "//mojo/public/c:system",
  ]

  libs = [ "magenta" ]

  cflags = [
    "-Werror",
    "-Wsign-conversion",
  ]
}

static_library("system") {
  output_name = "mojo"

  sources = [
    "main.c",
  ]

  deps = [
    ":libmojo",
    "//mojo/public/c:system",
  ]
}
