# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("interfaces") {
  sources = [
    "compositor.mojom",
    "hit_tests.mojom",
    "nodes.mojom",
    "renderers.mojom",
    "resources.mojom",
    "scene_token.mojom",
    "scenes.mojom",
    "scheduling.mojom",
  ]

  deps = [
    "../../../geometry/interfaces",
    "../../../gpu/interfaces",
  ]
}
